--- a/lock_picker.html
+++ b/lock_picker.html
@@ -25,6 +25,8 @@
     var GameTime=0; // gametime in frames
     var gameClk; //variable holding timer that trigger frame refresh after set amount of time
 
+    var waitForListener=false;
+
     var GameState="play";// current state of the game. list of states: play, gameover
 
     var score=0; //number of hits the player made
@@ -64,8 +66,6 @@
         //init variables
         initVars();
 
-        //generate target
-        generateGoal();
         //boot the game itself
         gameClk = setInterval(updateGamestate,1000/fps);
     }
@@ -79,6 +79,9 @@
         sign=1;
         GoalPos=0; //lowest angle of the goal in rad
         GoalSize=GoalSize_init; //size of the goal in rad
+
+        //generate target
+        generateGoal();
     }
 
 
@@ -143,7 +146,10 @@
         GameTime++;
         switch(GameState){
             case "play": 
-                updatePlayer();
+                if(!waitForListener){
+                    //only change player coordinates if there is no collision detection running for the current set of coordinates
+                    updatePlayer();
+                }
                 drawFrame();
             break;
             case "gameover": 
@@ -156,7 +162,7 @@
 
      //declaring eventlisteners
      const mouseDownListener = (event)=>{
-        
+        waitForListener=true;
         switch(GameState){
             case "play": 
                 //check whether it was a hit
@@ -184,6 +190,7 @@
             break;
         }      
         event.preventDefault();
+        waitForListener=false;
     }
     
     //calculate coordinates relative to canvas
@@ -261,32 +268,13 @@
     //checks for collision between player and goal
     function isCollision(){
         //calculate players angles
-        var Angle_player_center=Math.atan2(playerCoord.x - 250,playerCoord.y -250);
-        //convert the angle from atan2 to the javascript canvas.arc() angle
-        if((Angle_player_center>=0)&&(Angle_player_center<=0.5*Math.PI)){
-            Angle_player_center=0.5*Math.PI-Angle_player_center;
-        }
-        if((Angle_player_center<=Math.PI)&&(Angle_player_center>=0.5*Math.PI)){
-            Angle_player_center=2.5*Math.PI-Angle_player_center;
-        }
-        if((Angle_player_center<=0)&&(Angle_player_center>=-1*Math.PI)){
-            Angle_player_center=0.5*Math.PI+-1*Angle_player_center;
-        }
+        var Angle_player_center=player_angle%(2*Math.PI);
+        Angle_player_center = -1*(Angle_player_center-(2*Math.PI));
 
         var Angle_player_upper=Angle_player_center + Math.asin(playerRadius/100);
         var Angle_player_lower=Angle_player_center - Math.asin(playerRadius/100);
 
-        /*console.log("player angle center: "+Angle_player_center);
-        console.log("player angle upper: "+Angle_player_upper);
-        console.log("player angle lower: "+Angle_player_lower);
-        console.log("goal angle: "+GoalPos);
-        var temp=GoalPos+GoalSize;
-        console.log("goal angle upper: "+temp);*/
-
         var GoalPos_upper=GoalPos+GoalSize;
-        if(GoalPos_upper>2*Math.PI){
-            GoalPos_upper-=2*Math.PI;
-        }
 
         if((Angle_player_upper>=GoalPos) &&(Angle_player_upper<=GoalPos_upper))
         {
@@ -296,12 +284,22 @@
         {
             return true;
         }
-        return false;
+
+        //display angles (for debugging purposes)
+        /*console.log("player angle center: "+Angle_player_center);
+        console.log("player angle upper: "+Angle_player_upper);
+        console.log("player angle lower: "+Angle_player_lower);
+        console.log("goal angle: "+GoalPos);
+        var temp=GoalPos+GoalSize;
+        console.log("goal angle upper: "+temp);*/
+
         //draw angle from zero to center (for debugging purposes)
         /*context.beginPath();
         context.arc(250,250,100,0,Angle_player_center);
         context.strokeStyle="green";
         context.stroke();*/
+
+        return false;
     }
 
     function drawFrame(){
