add mentions of other great sits

--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!--based on: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_photo3&stacked=h-->
+<!--based on: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_portfolio&stacked=h -->
 <!DOCTYPE html>
 <html>
 <title>Minigames Homepage</title>
@@ -64,6 +64,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
   </div>-->
+
+  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
+    <h4><b>Other javascript game sites worth visiting</b></h4>
+    <p>
+      A website with games that are less than 13kBytes: <a href="https://js13kgames.com/entries">js13kgames</a>
+    </p>
+    <hr>
+  </div>
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
