--- a/home.html
+++ b/home.html
@@ -78,8 +78,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-row-padding">
     <div class="w3-twothird">
         <p>Retro style arcade games. No nonsense, no cookies. Just plain javascript.</p>
-      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-      <a href='http://www.freevisitorcounters.com' class="w3-right">at Freevisitorcounters.com</a> 
+      <p>This site is powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+      
+      You are viewer number: <a href='http://www.freevisitorcounters.com' class="w3-right">at Freevisitorcounters.com</a> 
       <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=f99ca0aee621f76b3713ec795525cbd59f9c624b'></script>
       <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/783798/t/5"></script>
     </div>
