added manifest and icons. updated home.html to redirect

--- a/home.html
+++ b/home.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <script>
+        // automatically redirect to the actual homepage:
+        window.location.replace("https://mrhaan.github.io/js_minigames_public/");
+    </script>
 </head>
 <body>
    <p> This page no longer exists. The new home page is found here: 
