--- a/lock_picker.html
+++ b/lock_picker.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="resources/icons/icon_512.png">
     <title>Lock picker game</title>
 </head>
 <body>
@@ -129,8 +129,6 @@
 
         //set the global variable to its new value
         screenCoord_scale=scale;
-        
-        console.log(screenCoord_scale);
     }
 
     //translate the window such that it is centered
