--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!--based on: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_portfolio&stacked=h -->
 <!DOCTYPE html>
 <html>
-<title>Minigames Homepage</title>
+<head>
+
+  <title>Minigames Homepage</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="resources/icons/icon_512.png">
+<link rel="manifest" href="manifest.webmanifest">
+
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
@@ -16,6 +21,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 </style>
+</head>
+
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
 <!-- !PAGE CONTENT! -->
