--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Minigames Homepage</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="resources/icons/icon_512.png">
+<script src="index.js"></script>
+<link rel="icon" href="resources/icons/icon512.png">
 <link rel="manifest" href="manifest.webmanifest">
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
