--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="icon" href="resources/icons/icon512.png">
 <link rel="manifest" href="manifest.webmanifest">
 
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="w3.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 /* latin */
