increase lighthouse score for better user friendliness

--- a/games/lock_picker.html
+++ b/games/lock_picker.html
@@ -6,7 +6,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="resources/icons/icon_512.png">
+    <meta name="theme-color" content="#00c5d3"/>
+    <meta name="Description" content="Arcade minigame about lock picking.">
+    <meta name="keywords" content="JavaScript, game, arcade, opensource, lockpicker, pwa">
+
+    <link rel="icon" href="../resources/icons/icon512.png">
     <title>Lock picker game</title>
 </head>
 <body>
