--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!--based on: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_portfolio&stacked=h -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-
-  <title>Minigames Homepage</title>
+<title>Minigames Homepage</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="theme-color" content="#00c5d3"/>
+<meta name="Description" content="Collection of simple javascript games.">
+<meta name="keywords" content="JavaScript, game, arcade, opensource, pwa">
+
+
 <script src="index.js"></script>
 <link rel="icon" href="resources/icons/icon512.png">
+<link rel="apple-touch-icon" href="resources/icons/icon192.png">
 <link rel="manifest" href="manifest.webmanifest">
 
 <link rel="stylesheet" href="w3.css">
@@ -39,7 +44,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="games/lock_picker.html"><img src="resources/icon_lockpicker.png" alt="Lock Picker Game" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="games/lock_picker.html"><img src="resources/icon_lockpicker.png" alt="Lock Picker Game" width="42" height="42" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Lock picker</b></p>
         <p>Click when the picker is on the key hole. Can you get the highest score?</p>
@@ -74,7 +79,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>-->
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
-    <h4><b>Other javascript game sites worth visiting</b></h4>
+    <h2><b>Other javascript game sites worth visiting</b></h2>
     <p>
       A website with games that are less than 13kBytes: <a href="https://js13kgames.com/entries">js13kgames</a>
     </p>
@@ -86,9 +91,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-row-padding">
     <div class="w3-twothird">
         <p>Retro style arcade games. No nonsense, no cookies. Just plain javascript.</p>
-      <p>This site is powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+      <p>This site is powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" rel="noreferrer">w3.css</a></p>
       
-      You are viewer number: <a href='http://www.freevisitorcounters.com' class="w3-right">at Freevisitorcounters.com</a> 
+      You are viewer number: <a href='http://www.freevisitorcounters.com' rel="noreferrer" class="w3-right">at Freevisitorcounters.com</a> 
       <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=f99ca0aee621f76b3713ec795525cbd59f9c624b'></script>
       <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/783798/t/5"></script>
     </div>
