--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="games/lock_picker.html"><img src="resources/icon_lockpicker.png" alt="Lock Picker Game" width="42" height="42" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="games/lock_picker.html"><img src="resources/icon_lockpicker.png" alt="Lock Picker Game" width="42" height="42" style="width:100%; height:auto;" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Lock picker</b></p>
         <p>Click when the picker is on the key hole. Can you get the highest score?</p>
