updated icon size set

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 
 
 <script src="index.js"></script>
-<link rel="icon" href="resources/icons/icon512.png">
-<link rel="apple-touch-icon" href="resources/icons/icon192.png">
+<link rel="icon" href="resources/icons/favicon.png">
+<link rel="apple-touch-icon" href="resources/icons/icon120_mask.png">
+<link rel="apple-touch-icon" href="resources/icons/icon152_mask.png">
+<link rel="apple-touch-icon" href="resources/icons/icon167_mask.png">
+<link rel="apple-touch-icon" href="resources/icons/icon180_mask.png">
 <link rel="manifest" href="manifest.webmanifest">
 
 <link rel="stylesheet" href="w3.css">
