--- a/games/lock_picker.html
+++ b/games/lock_picker.html
@@ -10,7 +10,11 @@
     <meta name="Description" content="Arcade minigame about lock picking.">
     <meta name="keywords" content="JavaScript, game, arcade, opensource, lockpicker, pwa">
 
-    <link rel="icon" href="../resources/icons/icon512.png">
+    <link rel="icon" href="../resources/icons/favicon.png">
+<link rel="apple-touch-icon" href="../resources/icons/icon120_mask.png">
+<link rel="apple-touch-icon" href="../resources/icons/icon152_mask.png">
+<link rel="apple-touch-icon" href="../resources/icons/icon167_mask.png">
+<link rel="apple-touch-icon" href="../resources/icons/icon180_mask.png">
     <title>Lock picker game</title>
 </head>
 <body>
