--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <p>
       A website with games that are less than 13kBytes: <a href="https://js13kgames.com/entries">js13kgames</a>
     </p>
+    <h3>Minigames <a href="https://thallesmaia.com/" rel="noreferrer">Thalles Maia</a></h3>
+
+    <div class="w3-container w3-quarter w3-margin-bottom">
+      <a href="https://tmaiadev-snake.netlify.app/" rel="noreferrer" class="w3-button w3-border w3-ripple">Snake Game</a>
+
+    </div>
+    <div class="w3-container w3-quarter w3-margin-bottom">
+      <a href="https://tmaiadev-tetra.netlify.app/" rel="noreferrer" class="w3-button w3-border w3-ripple">Tetra Game</a>
+
+    </div>
+    <div class="w3-container w3-quarter w3-margin-bottom">
+      <a href="https://tmaiadev-tictactoe.netlify.app/" rel="noreferrer" class="w3-button w3-border w3-ripple">Tic Tac Toe Game</a>
+
+    </div>
     <hr>
   </div>
 
