--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#00c5d3"/>
-<meta name="Description" content="Collection of simple javascript games.">
+<meta name="Description" content="Collection of simple javascript games">
 <meta name="keywords" content="JavaScript, game, arcade, opensource, pwa">
 
 
