--- a/index.html
+++ b/index.html
@@ -11,32 +11,48 @@
 
 
 <script src="index.js"></script>
-<link rel="icon" href="resources/icons/favicon.png">
-<link rel="apple-touch-icon" href="resources/icons/icon120_mask.png">
-<link rel="apple-touch-icon" href="resources/icons/icon152_mask.png">
-<link rel="apple-touch-icon" href="resources/icons/icon167_mask.png">
+<link rel="icon" href="resources/icons/favicon.ico">
+<link rel="icon" href="resources/icons/favicon.svg" type="image/svg+xml">
+<link rel="mask-icon" href="resources/icons/icon_apple_pinned_tab.svg" color="#FF961D">
 <link rel="apple-touch-icon" href="resources/icons/icon180_mask.png">
 <link rel="manifest" href="manifest.webmanifest">
 
 <link rel="stylesheet" href="w3.css">
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
-/* latin */
-@font-face {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/raleway/v18/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCIPrE.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-</style>
 </head>
 
-<body class="w3-light-grey w3-content" style="max-width:1600px">
+<style>
+  body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+  /* latin */
+  @font-face {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/raleway/v18/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCIPrE.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+ 
+    .hover-icon-bg:hover{
+        background-color:#00c5d3;
+    }
+    </style>
+
+<body class="w3-light-grey">
+
+<!--sidebar-->
+<div class="w3-col l2 m2 s4">
+   <!--include icon with link to the minigames homepage-->
+    <div style="width: 50%; position: relative;z-index:1; margin:10px;">
+        <a href="#"  style="position:relative;z-index:1;"> 
+            <img src="resources/icons/icon_transparent.svg" alt="JS minigames home" title="JS Minigames Home"
+            class="w3-circle w3-ripple hover-icon-bg" 
+            style="width:100%;height:100%;max-width:100px; border-width:2px; border-style: solid;">
+        </a>    
+    </div>
+</div>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main">
-
+<div class="w3-main w3-col l8 m10 s10">
+ 
   <!-- Header -->
   <header id="portfolio">
     <div class="w3-container">
@@ -47,7 +63,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="games/lock_picker.html"><img src="resources/icon_lockpicker.png" alt="Lock Picker Game" width="42" height="42" style="width:100%; height:auto;" class="w3-hover-opacity"></a>
+      <a href="games/lock_picker.html"><img src="resources/icon_lockpicker.png" alt="Lock Picker Game" width="42" height="42" style="width:100%; height:auto;" class="w3-hover-opacity w3-ripple"></a>
       <div class="w3-container w3-white">
         <p><b>Lock picker</b></p>
         <p>Click when the picker is on the key hole. Can you get the highest score?</p>
