added (test) icon for windows 10

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link rel="icon" href="resources/icons/favicon.svg" type="image/svg+xml">
 <link rel="mask-icon" href="resources/icons/icon_apple_pinned_tab.svg" color="#FF961D">
 <link rel="apple-touch-icon" href="resources/icons/icon180_mask.png">
+<meta name="msapplication-config" content="tile.xml" />
 <link rel="manifest" href="manifest.webmanifest">
 
 <link rel="stylesheet" href="w3.css">
