update homepage content

--- a/index.html
+++ b/index.html
@@ -98,25 +98,31 @@
     </div>
   </div>-->
 
-  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
+  <div class="w3-container w3-padding-large">
     <h2><b>Other javascript game sites worth visiting</b></h2>
+    <h3>Minigames <a href="https://thallesmaia.com/"  target="_blank" rel="noreferrer">Thalles Maia</a></h3>
+    <div class="w3-row">
+      <div class="w3-container w3-quarter w3-margin-bottom">
+        <a href="https://tmaiadev-snake.netlify.app/"  target="_blank" rel="noreferrer" class="w3-button w3-border w3-ripple">Snake Game</a>
+      </div>
+    
+      <div class="w3-container w3-quarter w3-margin-bottom w3-margin-left">
+        <a href="https://tmaiadev-tetra.netlify.app/"  target="_blank" rel="noreferrer" class="w3-button w3-border w3-ripple">Tetra Game</a>
+      </div>
+    </div>
+<h3>Sites</h3>    
     <p>
-      A website with games that are less than 13kBytes: <a href="https://js13kgames.com/entries">js13kgames</a>
+      A website with games that are less than 13kBytes: <a href="https://js13kgames.com/entries"  target="_blank" rel="noreferrer">js13kgames</a>
     </p>
-    <h3>Minigames <a href="https://thallesmaia.com/" rel="noreferrer">Thalles Maia</a></h3>
-
-    <div class="w3-container w3-quarter w3-margin-bottom">
-      <a href="https://tmaiadev-snake.netlify.app/" rel="noreferrer" class="w3-button w3-border w3-ripple">Snake Game</a>
-
-    </div>
-    <div class="w3-container w3-quarter w3-margin-bottom">
-      <a href="https://tmaiadev-tetra.netlify.app/" rel="noreferrer" class="w3-button w3-border w3-ripple">Tetra Game</a>
-
-    </div>
-    <div class="w3-container w3-quarter w3-margin-bottom">
-      <a href="https://tmaiadev-tictactoe.netlify.app/" rel="noreferrer" class="w3-button w3-border w3-ripple">Tic Tac Toe Game</a>
-
-    </div>
+    <p>
+      An appstore for free games and webapps: 
+      <div class="w3-row">
+        <div class="w3-container w3-quarter w3-margin-bottom">
+          <!--use target=_blank to make the url open in the browser instead of this PWA-->
+          <a href="https://appsco.pe/category/games" target="_blank" rel="noreferrer" class="w3-button w3-border w3-ripple">Appscope</a>
+        </div>
+      </div>
+    </p>
     <hr>
   </div>
 
